<resources>
        <string name="app_name">Quick Cash</string>
        <string-array name="role_options">
            <item>Employer</item>
            <item>Employee</item>
        </string-array>
    <string name="quickcash" translatable="false">QUICKCASH</string>
    <string name="create_account" translatable="false">Create account</string>
    <string name="name" translatable="false">Name</string>
    <string name="email_address" translatable="false">Email address</string>
    <string name="contact_number" translatable="false">Contact number</string>
    <string name="password_must_be_8_characters" translatable="false">Password (must be 8 characters)</string>
    <string name="by_creating_an_account_or_signing_you_agree_to_our_terms_and_conditions" translatable="false">By creating an account or signing you agree to our Terms and Conditions</string>
    <string name="error" translatable="false">Error</string>
    <string name="invalid_details_please_re_enter_your_information" translatable="false">Invalid details, please re-enter your information.</string>
    <string-array name="spinner_role">
        <item>Employer</item>
        <item>Employee</item>

    </string-array>
</resources>